# lead-engine

./: .env.example  .gitignore  ATS_PROVIDER_RANKING.md  IMPLEMENTATION_PLAN.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  pyproject.toml  requirements.md
config/: keywords.yaml  query_packs.yaml  runtime.yaml  scoring.yaml
src/lead_engine/: __init__.py  __main__.py  cli.py  orchestrator.py
src/lead_engine/classify/: __init__.py  ai_classifier.py  rule_classifier.py
src/lead_engine/crawl/: fetcher.py
src/lead_engine/crawl/parsers/: __init__.py  ats_ashby.py  ats_greenhouse.py  ats_lever.py  ats_recruitee.py  ats_smartrecruiters.py  ats_teamtailor.py  ats_workable.py  ecosystem_generic.py  funding_generic.py  launch_generic.py
src/lead_engine/export/: __init__.py  csv_exporter.py
src/lead_engine/normalize/: __init__.py  ats_normalizer.py  url_normalizer.py
src/lead_engine/providers/: __init__.py  serpapi.py
src/lead_engine/resolve/: __init__.py  domain_resolver.py
src/lead_engine/score/: __init__.py  outreach_note.py  router.py  scoring.py
src/lead_engine/storage/: models.py  sqlite_store.py
